added stylings for active navigation links

--- a/rmeet_main/frontend/src/index.css
+++ b/rmeet_main/frontend/src/index.css
@@ -17,6 +17,12 @@ body {
   height: 100vh;
 }
 
+nav a.active,
+nav a:last-child.active {
+  background-color: #000054;
+  color: #FFFFFF;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
