--- a/rmeet_main/frontend/src/index.css
+++ b/rmeet_main/frontend/src/index.css
@@ -6,6 +6,10 @@
 	padding: 0;
 }
 
+.App {
+	height: 100vh;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
