--- a/rmeet_main/frontend/src/index.css
+++ b/rmeet_main/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
@@ -11,6 +13,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  height: 100vh;
 }
 
 code {
